* bug:MID-9733[] Fixed datepicker issue when inbound mapping with seconds exists.
* bug:MID-10319[] Fixed incorrect error message displayed when performing "Unlock" action on user list page.
* bug:MID-10317[] Fixed missing message when user disable fails.
* bug:MID-10320[] Fixed ninja zip option used during export/import.
* bug:MID-10218[] Task execution constraints added to advanced options tab.
* bug:MID-10305[] Remove max password length constraint.

== Changes With Respect To Version 4.8

=== New Features and Major Improvements

* xrefv:/midpoint/reference/support-4.9/resources/attribute-caching/[Shadow caching] was significantly improved and is now a regular midPoint feature.
** Shadow caching is enabled by default on new deployments and needs to be explicitly enabled on existing ones.
* Native Repository Support for `searchContainersIteratively` for all container types
** Removed upper record limit for reports for assignments, certification cases, certification work items and others.
** Changed transaction isolation from READ_COMMITED to REPEATABLE_READ.
** Changed storage strategy for complex container types - actual data stored inside their own table instead of parent object JSON.
* Added support for external data in protected strings, that can be resolved via secrets providers.
This allows to store secrets in external systems, such as HashiCorp Vault, AWS Secrets Manager, Azure Key Vault, etc.
For more information see xrefv:/midpoint/reference/support-4.9/security/credentials/secrets-provider-configuration.adoc[].
** Adding support for GUI of passwords in connector configuration and password of focus (visible only when it is configured in xml)
* Improvements regarding xrefv:/midpoint/reference/support-4.9/resources/entitlements/[shadow associations]:
** Support for native object references in ConnId (1.6.0.0-RC1).
** A new style of configuring simulated object references (via capabilities).